@@ -1,3 +1,12 @@
+Sun Oct 30 22:42:44 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * bin/ciao.localityconfig:
+        * dance/LocalityManager/Scheduler/Events/Connect.cpp:
+        * dance/Plan_Launcher/Plan_Launcher_Base_Impl_T.cpp:
+
+          Moved name service resolution of external reference endpoints into the
+          CIAO deployment interceptors.
+
 Tue Oct 25 17:30:32 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * tools/Split_Plan/Split_Plan.cpp:
